[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
ctrlc = { version = "3.2.2", default-features = false }
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3"
